I am the king of the north

--- a/FirstClass.ipynb
+++ b/FirstClass.ipynb
@@ -711,6 +711,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am the king of the north\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('I am the king of the north')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
